// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headline component should render correctly 1`] = `
.emotion-0 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #141414;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    padding: 2.5rem 0;
  }
}

<div>
  <h1
    class="emotion-0 emotion-1"
  >
    This is my headline.
  </h1>
</div>
`;

exports[`Headline component should render correctly on page types that support a dark ui 1`] = `
.emotion-0 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #F6F6F6;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    padding: 2.5rem 0;
  }
}

<div>
  <h1
    class="emotion-0 emotion-1"
  >
    This is my headline.
  </h1>
</div>
`;

exports[`Headline component should render correctly with arabic script typography values 1`] = `
.emotion-0 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #141414;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 2.5rem;
    line-height: 3.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    padding: 2.5rem 0;
  }
}

<div>
  <h1
    class="emotion-0 emotion-1"
  >
    هذا هو العنوان الخاص بي
  </h1>
</div>
`;

exports[`SubHeading component should render correctly 1`] = `
.emotion-0 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #141414;
  padding: 0.5rem 0;
  margin: calc(1.5rem - 0.5rem) 0;
  scroll-margin-top: 1rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: calc(2rem - 0.5rem);
  }
}

.emotion-0:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

<div>
  <h2
    class="emotion-0 emotion-1"
    tabindex="-1"
  >
    This is a SubHeading
  </h2>
</div>
`;

exports[`SubHeading component should render correctly on page types that support a dark ui 1`] = `
.emotion-0 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #F6F6F6;
  padding: 0.5rem 0;
  margin: calc(1.5rem - 0.5rem) 0;
  scroll-margin-top: 1rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: calc(2rem - 0.5rem);
  }
}

.emotion-0:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

<div>
  <h2
    class="emotion-0 emotion-1"
    tabindex="-1"
  >
    This is a SubHeading
  </h2>
</div>
`;

exports[`SubHeading component should render correctly with an ID 1`] = `
.emotion-0 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #141414;
  padding: 0.5rem 0;
  margin: calc(1.5rem - 0.5rem) 0;
  scroll-margin-top: 1rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: calc(2rem - 0.5rem);
  }
}

.emotion-0:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

<div>
  <h2
    class="emotion-0 emotion-1"
    id="This-is-a-SubHeading"
    tabindex="-1"
  >
    This is a SubHeading
  </h2>
</div>
`;

exports[`SubHeading component should render correctly with arabic script typography values 1`] = `
.emotion-0 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #141414;
  padding: 0.5rem 0;
  margin: calc(1.5rem - 0.5rem) 0;
  scroll-margin-top: 1rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-0 {
    font-size: 1.5rem;
    line-height: 2.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    font-size: 2rem;
    line-height: 2.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-0 {
    margin-top: calc(2rem - 0.5rem);
  }
}

.emotion-0:focus-visible {
  outline: 0.1875rem solid #000000;
  box-shadow: 0 0 0 0.1875rem #FFFFFF;
  outline-offset: 0.1875rem;
}

<div>
  <h2
    class="emotion-0 emotion-1"
    tabindex="-1"
  >
    هذا عنوان فرعي
  </h2>
</div>
`;
